Add transition to card

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
     <title>Breweris</title>
   </head>
   <body>
